--- a/estilos/style.css
+++ b/estilos/style.css
@@ -7,8 +7,8 @@ body						{font: 16px Georgia, serif;}
 						 margin-bottom: 1px; color: black;}
 
 section > div				{padding: 20px;}
-header, nav, section		{background: #eee; text-align: center;}
-footer					{background: #eee; text-align: center;}
+header, nav, section		{background: #B1F2F8; text-align: center;}
+footer					{background: #B1F2F8; text-align: center;}
 nav span             				{ margin: 0px 10px 0px 0px;
 						width: 100%;
 						display: inline-block;}
